--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
+    "dependencies": {
+        "axios": "^0.21.1",
+        "bootstrap": "^5.1.0",
+        "vue": "^3.0.11",
+        "vue-router": "^4.0.6",
+        "vuex": "^4.0.0"
+    },
     "devDependencies": {
         "@symfony/stimulus-bridge": "^2.0.0",
         "@symfony/webpack-encore": "^1.0.0",
+        "@vue/compiler-sfc": "^3.1.5",
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
         "stimulus": "^2.0.0",
+        "vue-loader": "^16.1.0",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
