--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
         "bootstrap": "^5.1.0",
         "vue": "^3.0.11",
         "vue-router": "^4.0.6",
-        "vuex": "^4.0.0"
+        "vuex": "^4.0.0",
+        "webpack-dev-server": "^4.0.0-beta.3"
     },
     "devDependencies": {
-        "@symfony/stimulus-bridge": "^2.0.0",
         "@symfony/webpack-encore": "^1.0.0",
-        "@vue/compiler-sfc": "^3.1.5",
+        "@vue/compiler-sfc": "^3.1.4",
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
         "sass": "^1.32.11",
@@ -21,6 +21,7 @@
     "license": "UNLICENSED",
     "private": true,
     "scripts": {
+        "hot": "encore dev-server --hot",
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
