--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
         "@symfony/webpack-encore": "^1.0.0",
         "@vue/compiler-sfc": "^3.1.4",
         "core-js": "^3.0.0",
+        "file-loader": "^6.0.0",
+        "install": "^0.13.0",
+        "npm": "^7.20.5",
         "regenerator-runtime": "^0.13.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
