--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,7 +19,10 @@ security:
         main:
             lazy: true
             provider: app_user_provider
-
+            json_login:
+                check_path: app_login
+                username_path: email
+                password_path: password
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
 
@@ -29,5 +32,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/login, roles: PUBLIC_ACCESS }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
