--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "dependencies": {
+        "@fortawesome/fontawesome-free": "5.15.3",
         "axios": "^0.21.1",
         "bootstrap": "^5.1.0",
         "vue": "^3.0.11",
