--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.15.3",
+        "@vueform/multiselect": "^2.1.2",
         "axios": "^0.21.1",
         "bootstrap": "^5.1.0",
+        "luxon": "^2.0.2",
+        "moment": "^2.29.1",
+        "qs": "^6.10.1",
         "vue": "^3.0.11",
+        "vue-final-modal": "^3.4.0",
         "vue-router": "^4.0.6",
         "vuex": "^4.0.0",
         "webpack-dev-server": "^4.0.0-beta.3"
