--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    manipulation_directory: '%kernel.project_dir%/public/uploads/file-manipulation'
 
 services:
     # default configuration for services in *this* file
@@ -25,3 +26,6 @@ services:
     # please note that last definitions always *replace* previous ones
     App\DataPersisters\TicketDataPersister:
         decorates: 'api_platform.doctrine.orm.data_persister'
+    app.manipulator:
+        class: 'App\Service\ManipulatorService\Manipulator'
+        arguments: ['@validator', '@slugger']
