Status emails setup

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=8aee6234b588d5f1b94b62d35294814a
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=null://null
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
